# manifold

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INCOHERENCIAS_TOROIDE_Y_LOSSES.md  LICENSE  NOTICE  README.md  SECURITY.md  analyze_cuda_system.py  code_analysis.md  compile.bat  debug_autograd.py  debug_indexing.py  gradient_audit.md  incoherencias_manifold.md  inventory_script.py  pyproject.toml  requirements.txt  setup.py  test_toroidal_autograd.py
demos/: fractal_recall_demo.py
demos/multimodal/: multimodal_mnist.py
docs/: 00-INDEX.md  API.md  ARCHITECTURE.md  BENCHMARKS.md  CUDA_FIX_PLAN.md  DOCUMENTATION_INDEX.md  MANIFOLD_COMPLETE_REFERENCE.md  MANIFOLD_PAPERS.tex  PHYSICS.md  README.md  SCIENTIFIC_PAPER.md  TECHNICAL_HANDBOOK.md  TRAINING.md  benchmarking.md  getting-started.md  mathematical-foundations.md  troubleshooting.md  tutorial.md
docs/00_HISTORY/: 2026_01_24_PARITY_BREAKTHROUGH.md
docs/00_papers/: 00_FOUNDATIONAL_HYPOTHESIS.md  01_HYPER_TORUS.md  02_REACTIVE_GEOMETRY.md  03_THERMODYNAMIC_GATING.md  04_SYMPLECTIC_ATTENTION.md  05_HOLOGRAPHIC_LATENT_SPACE.md  06_SEMANTIC_EVENT_HORIZONS.md  (+35 more)
gfn/: __init__.py  adjoint.py  api.py  constants.py  core_cuda_formulas_inventory.md  errors.py  losses.py  math_dataset.py  mixed_dataset.py  model.py  registry.py  scan.py  setup.py  smoke_test.py
scripts/: reset_and_check_initial_loss.py  smoke_test_protocols.py  train.py  verify_computation_layer.py  verify_cuda_parity.py  verify_math_parity.py
tests/: CONSISTENCY_TESTS_README.md  README.md  conftest.py  run_consistency_tests.py  run_suite.py  test_adaptive_integrator.py  test_christoffel_backward_verification.py  test_confusion_metric.py  test_cuda_python_consistency.py  test_curiosity_noise.py  test_holographic.py  test_hysteresis_geometric.py  test_noether.py  test_ricci.py  test_speed.py  test_thermo_metric.py  test_vnext_stack.py  validate_consistency_fix.py
(+605 files in other folders)
